Fixed most of the formatting issues on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -36,13 +36,22 @@
     transform: rotate(360deg);
   }
 } */
+.full-container {
+  display: flex;
+    /* width: 95%; */
+    flex-direction: column;
+    z-index: 99;
+    height: 100vh;
+    justify-content: "space-between";
+    background-color: aquamarine;
+}
 .app-container {
   
     display: flex;
     /* width: 95%; */
+    
     flex-direction: column;
-    /* overflow: hidden; */
-    height: 100vh;
+    /* height: 80vh; */
     justify-content: "space-between";
     background-color: aquamarine;
 
