--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,20 +2,25 @@
     display: flex;
     /* width: 95%; */
     flex-direction: column;
-    /* overflow-y: scroll; */
+    
     /* height: 100vh - 85; */
-    overflow-y: auto;
-    height:100%;
+    padding-top: 85px;
+    /* overflow-y: auto; */
+    /* height:100%; */
+    /* padding-bottom: 85px; */
     justify-content: "space-between";
     background-color: aquamarine;
 }
 .content{
     /* display: flex; */
     width: 95%;
-    flex-direction: column;
+    display: flex;
+    /* flex: 1; */
+    flex-direction: row;
     align-self: center;
-    justify-content: "space-between";
+    justify-content: center;
     background-color: green;
+    min-height: 50px;
 }
 
 .contents{
@@ -37,12 +42,9 @@
     /* background-color: green; */
 }
 
-.containers {
-    padding-right: 15px;
-    padding-left: 15px;
-    margin-right: auto;
-    margin-left: auto;
-  }
+/* .container {
+    overflow-y: scroll;
+  } */
 
   
 
